# xwiimote

./: .gitignore  COPYING  DEV  INSTALL  LICENSE  Makefile.am  README  README.md  USAGE  autogen.sh  configure.ac  core.c  index.html  libxwiimote.pc.in  libxwiimote.sym  makefile
api/: annotated.html  annotated.js  classes.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__device.html  group__device.js  group__events.html  group__events.js  group__kernel.html  group__kernel.js  group__monitor.html  group__monitor.js  index.html  modules.html  modules.js  navtree.js  navtreeindex0.js  structxwii__event.html  structxwii__event.js  structxwii__event__abs.html  structxwii__event__abs.js  structxwii__event__key.html  structxwii__event__key.js  unionxwii__event__union.html  unionxwii__event__union.js  xwiimote_8h.html  xwiimote_8h.js  xwiimote_8h_source.html
compat/: cwiid.c  wiiuse.c  xwiimote_cwiid.h  xwiimote_wiiuse.h
doc/: DEVICES  DEV_REMOTE  Doxyfile.in  INTERFACE  INTERFACE_INPUT  INTERFACE_SYSFS  LIBRARY  PROTOCOL  eeprom.dump  libxwiimote.7  rdesc.dump  xwiikeymap.1  xwiimote.7  xwiishow.1
driver/: Makefile  hid-ids.h  hid-wiimote-debug.c  hid-wiimote-ext.c  hid-wiimote.c  makefile  remove_hidids.patch
driver/include/: bluetooth.h  log.h  main.h  proto.h
driver/src/: bluetooth.c  driver.c  hid-nintendo.c  hid-wiimote.c  log.c  main.c  proto.c
lib/: Makefile  core.c  dev.c  device.c  event.c  internal.h  libsfs.h  makefile  monitor.c  sfs.c  udev.c  xwiimote.h
lib/include/: xwii_input.h
misc/: ubuntu-bluez-wiimote-plus.sh
res/: 50-xorg-disable-wiimote.conf  50-xorg-fix-wiimote.conf  50-xorg-fix-xwiimote.conf  70-udev-xwiimote.rules
tools/: Makefile  eloop.c  eloop.h  log.c  log.h  makefile  xwii.c  xwiibind.sh  xwiiconn.c  xwiidump.c  xwiikeymap.c  xwiiprobe.sh  xwiishow.c
